# scraping_japanese_lottery_site_with_rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs  scraping.rs
src/scraping/: loto6_lottery.rs  mod.rs  num3_lottery.rs  num4_lottery.rs  traits.rs  types.rs  utils.rs
src/scraping/types/: mod.rs
src/scraping/utils/: mod.rs
