[package]
name = "scraping_japanese_lottery_site_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.15.0"
reqwest = "0.11"
html5ever = "0.26.0"
tokio = { version = "1", features = ["full"] }