[package]
name = "scraping_japanese_lottery_site"
version = "0.1.3"
authors = ["kubocker"]
description = "Library to get Japanese Lottery Result with Numbers3, Numbers4 and Loto6"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"


[dependencies]
scraper = "0.15.0"
reqwest = "0.11"
html5ever = "0.26.0"
html-escape = "0.2.13"
html2text = "0.6.0"
tokio = { version = "1", features = ["full"] }
